code13/app/client/mgb.css
.ui.sidebar {
  overflow: visible !important;
  z-index: 1000 !important
}

#root { 
  height: auto;
}

.no-events{
  pointer-events: none;
}

.map-filled, .map-empty{
  transition: .3s;
  min-height: 500px;
}
.map-filled.highlight-active-layer .no-events:not(.grid-layer){
  opacity: 0.5;
}

.tilemap-layer{
  position: absolute;
  width: 100%;
  height: 100%;
}
.tileset{
  position: relative;
}
.bold.active{
  font-weight: bold;
}

.accept-drop{
  position: relative;
}

body.dragging .accept-drop:after{
  content: attr(data-drop-text);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 1;
  height: 100%;
  background-color: rgba(255,255,255,0.5);
  font-size: 32pt;
  text-align: center;
  word-spacing: 20px;
  line-height: 40pt;
  padding: 20px;
  font-weight: bold;
}


/* 3d preview */
.tilemap-wrapper{
  perspective: 2000px;
  -webkit-user-select: none;
  cursor: default;
}

.map-filled.preview{
  transform: rotatey(45deg) rotatex(5deg) scale(0.9);
  transform-style: preserve-3d;
}
.map-filled.preview:active{
  transition-duration: unset;
}

.map-filled.preview .tilemap-layer:nth-of-type(1):not(.grid-layer) { transform: translatez(-120px); }
.map-filled.preview .tilemap-layer:nth-of-type(2):not(.grid-layer) { transform: translatez(-80px); }
.map-filled.preview .tilemap-layer:nth-of-type(3):not(.grid-layer) { transform: translatez(-40px); }
.map-filled.preview .tilemap-layer:nth-of-type(4):not(.grid-layer) { transform: translatez(-20px); }

/* map editor properties */
.compact {
  margin-top: -19px;
}
.compact .compact > .ui.accordion .title.active,
.compact .compact > .ui.accordion label .title
{
  padding-bottom: 0 !important;
  padding-top: 3px !important;
  margin: 0 !important;
}
.compact .compact.ui.content.active {
  padding: 4px;
  margin: 0;
}
.ui.styled.accordion .compact .accordion .active.title {
  padding-bottom: 0;
}
.ui.styled.accordion .compact .accordion .column > .title {
  padding-bottom: 0;
  padding-top: 0.1em;
}
.ui.styled.accordion .compact .accordion label {
  padding: 0;
}
.compact .ui.input > input {
  font-size: 10pt;
  padding: 0.3em 0.5em;
  margin: 2px;
}
.compact > label .title{
  padding: 0.1em;
}

